--- a/Balls-VSCode/index.html
+++ b/Balls-VSCode/index.html
@@ -14,8 +14,8 @@
         }
 
         #container {
-            width: 800px;
-            height: 600px;
+            width: 1024x;
+            height: 1024x;
             border: 0px black;
             margin: 0px auto;
             text-align: center;
@@ -23,18 +23,18 @@
 
         #canvas {
             border: 0px black;
-            width: 800px;
-            height: 600px;
+            width: 1024px;
+            height: 1024px;
         }
     </style>
 
 </head>
 <body>
     <div id="container">
-        <canvas id="canvas" width="800" height="600"></canvas>
+        <canvas id="canvas" width="1024" height="1024"></canvas>
     </div>
 
-    <img id = "greenball" src="images/greenball.png" style="display: none;" alt="" />
+    <img id = "greenBall" src="images/greenball.png" style="display: none;" alt="" />
 
     <script data-main="out/main.js" src="out/require.js"></script>
 
