--- a/Scroll-VSCode/index.html
+++ b/Scroll-VSCode/index.html
@@ -41,7 +41,7 @@
     </div>
 
     <script type="module">
-      import { App } from "/out/app.js"
+      import { App } from "/out/App.js"
       let application = new App();
       application.init();
       application.run();
